<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    >
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/mainTitle"
           android:textSize="30sp"
           android:background="@color/violet"
           android:textColor="@color/white"
       />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infoText"
            android:textSize="20sp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioGroupLabel"
            android:textSize="20sp"
            android:background="@color/violet"
            android:textColor="@color/white"
            />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        >
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:text="@string/radioButton1"
                android:onClick="layoutLinearSelected"
            />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/radioButton2"
                android:onClick="layoutConstraintSelected"
            />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violet"
            android:text="@string/starLabel"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bewerten Sie uns"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:stepSize="1.0"
        />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ihre Bewertung: 0"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinnerLabel"
            android:textSize="20sp"
            android:background="@color/violet"
            android:textColor="@color/white"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogLabel"
            android:textSize="20sp"
            android:background="@color/violet"
            android:textColor="@color/white"
        />
    </LinearLayout>
</ScrollView>